2010-10-12  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-insert): Check if buffer is alive
	before inserting the Gravatar.

	* shr.el (shr-tag-img): Add align attribute support for <img>.

2010-10-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-gravatar.el (gnus-art): Required.

	* gnus-sum.el (gnus-summary-mark-as-unread-forward)
	(gnus-summary-mark-as-unread-backward, gnus-summary-mark-as-unread):
	Remove long obsoleted functions.

2010-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind gnutls-negotiate for Emacs 22 and XEmacsen.

	* nnimap.el (gnutls-negotiate): Silence the byte compiler.

	* gnus-art.el, gnus-cache.el, gnus-fun.el, gnus-group.el,
	gnus-picon.el, gnus-spec.el, gnus-sum.el, gnus-util.el, gnus.el,
	hashcash.el, imap.el, mail-source.el, message.el, mm-bodies.el,
	mm-decode.el, mm-extern.el, mm-util.el, mm-view.el, mml-smime.el,
	mml.el, mml1991.el, mml2015.el, nnfolder.el, nnheader.el, nnmail.el,
	nnmaildir.el, nnrss.el, nntp.el, pgg-parse.el, pgg.el, rfc1843.el,
	sieve-manage.el, smime.el, spam.el: Fix comment for declare-function.

2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-rename-group): Select group read-only
	before renaming it.

	* shr.el (shr-insert): Fix up the white space only regexp.

	* nnimap.el (nnimap-transform-split-mail): Not all articles have
	bodies.  Protect against this.  Reported by Michael Welsh Duggan.

	* shr.el (shr-current-column): New function.
	(shr-find-fill-point): New function.

2010-10-11  Michael Welsh Duggan  <md5i@md5i.com>  (tiny change)

	* sieve-manage.el (sieve-manage-open): Allow port names as well as port
	numbers.

2010-10-11  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-hr-line): Add.
	(shr-tag-hr): Use shr-hr-line to specify which character to use to
	display hr lines.
	(shr-max-columns): Do not change state to nil if we just inserting
	spaces.

2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>
